--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
   <title>Screen Shot Saver</title>
 
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
@@ -55,12 +55,12 @@
 
 
   <!-- BOOTSTRAP 4 -->
-  <script src="/js/jquery-3.4.1.slim.min.js"></script>
+  <script src="./js/jquery-3.4.1.slim.min.js"></script>
   <!-- bundle contains both bootstarp and popper -->
-  <script src="/js/bootstrap.bundle.min.js"></script>
+  <script src="./js/bootstrap.bundle.min.js"></script>
 
   <!-- my scripts -->
-  <script src="/js/html2canvas.min.js"></script>
-  <script src="/js/script.js"></script>
+  <script src="./js/html2canvas.min.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
