added no scrolling to the iframes

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
       <div class="col-lg-6 device-holder">
         <label>1440x900</label>
         <div id="device-holder-desktop" class="device desktop">
-          <iframe id="device-desktop" src="./square.html" frameborder="0"></iframe>
+          <iframe id="device-desktop" src="./square.html" frameborder="0" scrolling="no"></iframe>
         </div>
       </div>
       <div class="col-lg-3 device-holder">
         <label>768x1024</label>
         <div class="device tablet">
-          <iframe id="device-tablet" src="./square.html" frameborder="0"></iframe>
+          <iframe id="device-tablet" src="./square.html" frameborder="0" scrolling="no"></iframe>
         </div>
       </div>
       <div class="col-lg-3 device-holder">
         <label>375x667</label>
         <div class="device smartphone">
-          <iframe id="device-smartphone" src="./square.html" frameborder="0"></iframe>
+          <iframe id="device-smartphone" src="./square.html" frameborder="0" scrolling="no"></iframe>
         </div>
       </div>
     </div>
